# IML-EX4-Omri-Melcer

./: .gitignore  IMLex4.ipynb  MLP.py  README.md  cnn.py  cnn_experiment.ipynb  main.py  pyproject.toml  xg.py
